--- a/style.css
+++ b/style.css
@@ -1,71 +1,128 @@
-h2{
-    margin-left: 1rem;
+.container {
+    padding: 2rem;
 }
 
-.navbar{
+.slider-wrapper {
+    position: relative;
+    max-width: 48rem;
+    margin: 0 auto;
+}
+
+.slider {
+    display: flex;
+    aspect-ratio: 16 / 9;
+    overflow: hidden;
+    scroll-snap-type: x mandatory;
+    box-shadow: 0 1.5rem 3rem -0.75rem hsla(0, 0%, 0%, 0.25);
+    border-radius: 0.5rem;
+}
+
+.slider img {
+    flex: 1 0 100%;
+    scroll-snap-align: start;
+    object-fit: cover;
+}
+
+.slider-nav {
+    display: flex;
+    column-gap: 1rem;
+    position: absolute;
+    bottom: 1.25rem;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1;
+}
+
+.slider-nav a {
+    width: 0.5rem;
+    height: 0.5rem;
+    border-radius: 50%;
+    background-color: #fff;
+    opacity: 0.75;
+}
+
+.slider-nav a:hover {
+    opacity: 1;
+}
+
+.navbar {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
     background-color: #fff;
-    padding: 15px;
+    padding: 20px;
 }
 
 .navbar a {
     text-decoration: none;
+    padding: 20px;
     color: inherit;
 }
 
-.logo{
+.logo {
     font-size: 3rem;
     margin-right: 50px;
 }
 
-.ri--menu-line {
-    display: inline-block;
-    width: 1em;
-    height: 1em;
-    --svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%23000' d='M3 4h18v2H3zm0 7h18v2H3zm0 7h18v2H3z'/%3E%3C/svg%3E");
-    background-color: currentColor;
-    -webkit-mask-image: var(--svg);
-    mask-image: var(--svg);
-    -webkit-mask-repeat: no-repeat;
-    mask-repeat: no-repeat;
-    -webkit-mask-size: 100% 100%;
-    mask-size: 100% 100%;
-  }
-
-.list{
+.list {
     list-style: none;
     display: flex;
     gap: 25px;
 }
 
-#toggler,
-.navbar label{
-    display: none;
-}
-
-@media screen and (max-width: 600px) {
-   .menu{
-    width: 100%;
-    max-height: 0;
-    overflow: hidden;
-   }
-   .list{
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
-   }
-   .navbar label{
+.navbar label {
     display: inline-flex;
     align-items: center;
     cursor: pointer;
-   }
-   #toggler:checked ~ .menu{
-    max-height: 100%;
-   }
+    z-index: 1;
 }
+
+.navbar label .ri--menu-line {
+    display: inline-block;
+    width: 1em;
+    height: 1em;
+    background-color: currentColor;
+    -webkit-mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%23000' d='M3 4h18v2H3zm0 7h18v2H3zm0 7h18v2H3z'/%3E%3C/svg%3E");
+    mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%23000' d='M3 4h18v2H3zm0 7h18v2H3zm0 7h18v2H3z'/%3E%3C/svg%3E");
+    -webkit-mask-repeat: no-repeat;
+    mask-repeat: no-repeat;
+    -webkit-mask-size: 100% 100%;
+    mask-size: 100% 100%;
+    transition: transform 0.3s ease;
+}
+
+#toggler:checked ~ .navbar label .ri--menu-line {
+    transform: rotate(90deg);
+}
+
+#toggler {
+    visibility: hidden;
+    width: 0;
+}
+
+
+@media screen and (max-width: 600px) {
+    .menu {
+        width: 100%;
+        max-height: 0;
+        overflow: hidden;
+    }
+    .list {
+        flex-direction: column;
+        align-items: center;
+        padding: 20px;
+    }
+    .navbar label {
+        display: inline-flex;
+        align-items: center;
+        cursor: pointer;
+    }
+    #toggler:checked ~ .menu {
+        max-height: 100%;
+    }
+}
+
 
 .card-group {
     max-width: 1260px;
@@ -74,7 +131,8 @@ h2{
     padding: 50px;
     overflow-x: scroll;
 }
-.card{
+
+.card {
     font-size: 3rem;
     color: #000000;
     flex: 0 0 300px;
@@ -87,13 +145,33 @@ h2{
     border-radius: 1rem;
     transition: transform 250ms;
 }
-.card:not(:first-child){
+
+.card:not(:first-child) {
     margin-left: -130px;
 }
-.card:hover{
-    transform: translate(-8px, -16px)
-    rotate(3deg);
+
+.card:hover {
+    transform: translate(-8px, -16px) rotate(3deg);
 }
-.card:hover ~ .card{
-    transform: translateX(130px);
+
+h2{
+    padding: 2rem;
+}
+
+html {
+    background-color: whitesmoke;
+    scroll-behavior: smooth;
+}
+
+.footer {
+    position: inherit;
+    bottom: 0;
+    left: 0;
+    z-index: 10;
+    background-color: #a8aaeb80;
+    text-align: center;
+}
+.footer a {
+    text-decoration: none;
+    color: #000000;
 }
