--- a/style.css
+++ b/style.css
@@ -61,12 +61,13 @@
 }
 
 .logo {
-    font-size: 3rem;
+    font-size: 3.5rem;
     margin-right: 50px;
 }
 
 .list {
     list-style: none;
+    text-align: center;
     display: flex;
     gap: 25px;
 }
@@ -154,7 +155,11 @@
     transform: translate(-8px, -16px) rotate(3deg);
 }
 
-h2{
+h1 {
+    padding: 3rem;
+    text-align: center;
+}
+h2 {
     padding: 2rem;
 }
 
@@ -164,14 +169,65 @@ html {
 }
 
 .footer {
+    color: white;
     position: inherit;
     bottom: 0;
     left: 0;
     z-index: 10;
-    background-color: #a8aaeb80;
+    background-color: black;
     text-align: center;
 }
 .footer a {
     text-decoration: none;
     color: #000000;
+}
+
+p {
+    text-align: center;
+    padding: 0.5rem;
+}
+
+.search {
+    justify-content: space-between;
+    display: inline-flex;
+    align-items: center;
+    background-image: #c22957;
+    color: black;
+    padding: 10px;
+    border-radius: 4px;
+    border: 1px solid black;
+}
+
+.search :is(input, button) {
+    background: transparent;
+    color: inherit;
+    border: none;
+    outline: none;
+}
+
+.searchinput{
+    width: 0;
+    transition: width 0.5s;
+}
+
+.searchbutton {
+    display: grid;
+    place-items: center;
+    width: 25px;
+    height: 25px;
+    cursor: pointer;
+    transition: color 0.25s;
+}
+
+.searchbutton:hover{
+    color: #e3e3e3;
+}
+
+.search:focus-within input {
+    width: 200px;
+}
+
+::placeholder {
+    font: inherit;
+    color: #e3e3e3
 }
